fix: acceptance test, and unit test